--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,11 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# dependencies
 node_modules
-dist
-dist-ssr
 *.local
+/.pnp
+.pnp.js
 
 # Editor directories and files
 .vscode/*
@@ -22,3 +23,16 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# testing
+/coverage
+
+# production
+/build
+/storybook-static
+
+# env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
