--- a/package.json
+++ b/package.json
@@ -1,23 +1,56 @@
 {
   "name": "living-app-v2-react-template",
+  "description": "Getting started with Living Apps 2.0: React project template",
+  "author": "livingappscoredevelopers@telefonica.com",
+  "repository": "https://github.com/Telefonica/living-app-v2-react-template",
   "private": true,
   "version": "0.1.0",
   "type": "module",
+  "engines": {
+    "yarn": "use npm!"
+  },
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "jest ."
+    "lint": "eslint src/",
+    "prettier:check": "prettier --check '**/*.{js,ts,tsx,json,md}'",
+    "prettier:write": "prettier --write '**/*.{js,ts,tsx,json,md}'",
+    "test": "jest --verbose --collectCoverage=false",
+    "test:coverage": "jest --collectCoverage",
+    "blue-ball": "npm run lint && npm run prettier:check && npm run test && npm run build && npm pack --dry-run"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.0.3",
+    "@types/living-apps-core-web": "https://globalmakermedia.blob.core.windows.net/core/sdk/types.tgz?v=0.1.0",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
+    "@vitejs/plugin-react": "^2.1.0",
+    "eslint": "^8.24.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.0.3",
+    "jest-environment-jsdom": "^29.0.3",
+    "jest-transform-stub": "^2.0.0",
+    "prettier": "^2.7.1",
+    "react-test-renderer": "^18.2.0",
+    "ts-jest": "^29.0.2",
+    "typescript": "^4.6.4",
+    "vite": "^3.1.0",
+    "vite-plugin-html": "^3.2.0",
+    "vite-plugin-svgr": "^2.2.1",
+    "vite-tsconfig-paths": "^3.5.1"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.1.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.1.0"
   }
 }
