--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "blue-ball": "npm run lint && npm run prettier:check && npm run test && npm run build && npm pack --dry-run"
   },
   "devDependencies": {
-    "@telefonica/living-apps-core-web-types": "^0.2.1",
+    "@telefonica/living-apps-core-web-types": "latest",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.0.3",
