--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint src/",
+    "lint:fix": "eslint --fix src/",
     "prettier:check": "prettier --check '**/*.{js,ts,tsx,json,md}'",
     "prettier:write": "prettier --write '**/*.{js,ts,tsx,json,md}'",
     "test": "jest --verbose --collectCoverage=false",
@@ -33,6 +34,7 @@
     "@vitejs/plugin-react": "^2.1.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react": "^7.31.8",
     "eslint": "^8.24.0",
