--- a/package.json
+++ b/package.json
@@ -26,30 +26,29 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.0.3",
-    "@types/react-dom": "^18.0.6",
-    "@types/react-test-renderer": "^18.0.0",
     "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
     "@vitejs/plugin-react": "^2.1.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-jest": "^27.2.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react": "^7.31.8",
     "eslint": "^8.24.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
     "jest-transform-stub": "^2.0.0",
-    "jest": "^29.0.3",
     "prettier": "^2.7.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "ts-jest": "^29.0.2",
     "typescript": "^4.6.4",
+    "vite": "^3.1.0",
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-svgr": "^2.2.1",
-    "vite-tsconfig-paths": "^3.5.1",
-    "vite": "^3.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "vite-tsconfig-paths": "^3.5.1"
   }
 }
