Add lint rule to prevent using function not compatible with STB

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -40,6 +40,11 @@ rules:
   "react/jsx-uses-react": off
   "react/react-in-jsx-scope": off
   "no-unused-vars": off
+  no-restricted-properties:
+    - error
+    - object: Object
+      property: fromEntries
+      message: "Please do not use Object.fromEntries(). It is not compatible with STB."
   "@typescript-eslint/no-unused-vars": [warn, { argsIgnorePattern: "^_" }]
   "@typescript-eslint/no-explicit-any": error
   "react-hooks/exhaustive-deps": error
