--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -1,60 +1,2 @@
-parser: "@typescript-eslint/parser"
-parserOptions:
-  ecmaVersion: 13
-  sourceType: module
-  ecmaFeatures: { jsx: true }
-
-env:
-  browser: true
-  es6: true
-  jest: true
-
-settings:
-  react:
-    version: detect
-
 extends:
-  - "eslint:recommended"
-  - "plugin:react/recommended"
-  - "plugin:react-hooks/recommended"
-  - "plugin:@typescript-eslint/recommended"
-  - "plugin:jest/recommended"
-  - "plugin:jest/style"
-  # Make sure this is always the last configuration in the extends array,
-  - "plugin:prettier/recommended"
-
-ignorePatterns:
-  - "*/dist"
-  - "*/build"
-  - "*/node_modules"
-  - "webpack.*"
-  - "*.html"
-
-plugins:
-  - "@typescript-eslint"
-  - "prettier"
-  - "jest"
-
-rules:
-  "prettier/prettier": warn
-  "react/jsx-uses-react": off
-  "react/react-in-jsx-scope": off
-  "no-unused-vars": off
-  no-restricted-properties:
-    - error
-    - object: Object
-      property: fromEntries
-      message: "Please do not use Object.fromEntries(). It is not compatible with STB."
-  "@typescript-eslint/no-unused-vars": [warn, { argsIgnorePattern: "^_" }]
-  "@typescript-eslint/no-explicit-any": error
-  "react-hooks/exhaustive-deps": error
-  "react/jsx-boolean-value": error
-  "@typescript-eslint/consistent-type-imports": warn
-  "react/self-closing-comp": error
-  "eqeqeq": error
-  "react/jsx-curly-brace-presence": [ error, { props: 'never', children: 'never' } ]
-  "jest/consistent-test-it": [ "error", { fn: "test", withinDescribe: "it" } ]
-
-overrides: []
-
-globals: {}
+  - "./node_modules/@telefonica/living-apps-eslint-config"
