--- a/package.json
+++ b/package.json
@@ -15,42 +15,38 @@
     "preview": "vite preview",
     "lint": "eslint src/",
     "lint:fix": "eslint --fix src/",
-    "prettier": "prettier --check '**/*.{js,ts,tsx,json,md,css,sass,scss}'",
-    "prettier:write": "prettier --write '**/*.{js,ts,tsx,json,md,css,sass,scss}'",
+    "prettier": "prettier --check '**/*.{js,cjs,mjs,ts,tsx,json,md,css,sass,scss}'",
+    "prettier:write": "prettier --write '**/*.{js,cjs,mjs,ts,tsx,json,md,css,sass,scss}'",
     "test:unit": "jest --verbose --collectCoverage=false",
     "test:coverage": "jest --collectCoverage",
     "blue-ball": "npm run lint && npm run prettier && npm run test:unit && npm run build && npm pack --dry-run"
   },
-  "devDependencies": {
+  "dependencies": {
     "@telefonica/living-apps-core-react": "latest",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
+  },
+  "devDependencies": {
     "@telefonica/living-apps-core-web-types": "latest",
-    "@testing-library/jest-dom": "^6.1.3",
-    "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.5",
-    "@types/react": "^18.2.22",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.3",
-    "@typescript-eslint/parser": "^6.7.3",
-    "@vitejs/plugin-legacy": "^4.1.1",
-    "@vitejs/plugin-react-swc": "^3.4.0",
-    "eslint": "^8.50.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-jest": "^27.4.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jest-transform-stub": "^2.0.0",
-    "prettier": "^3.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.2.2",
-    "vite": "^4.4.9",
-    "vite-plugin-html": "^3.2.0",
-    "vite-plugin-svgr": "^4.0.0",
-    "vite-tsconfig-paths": "^4.2.1"
+    "@telefonica/living-apps-eslint-config": "0.1.2",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.1.0",
+    "@types/jest": "29.5.14",
+    "@types/react": "19.0.4",
+    "@types/react-dom": "19.0.2",
+    "@vitejs/plugin-legacy": "6.0.0",
+    "@vitejs/plugin-react-swc": "3.7.2",
+    "eslint": "8.57.1",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "jest-transform-stub": "2.0.0",
+    "prettier": "3.4.2",
+    "ts-jest": "29.2.5",
+    "typescript": "5.7.3",
+    "vite": "6.0.7",
+    "vite-plugin-html": "3.2.2",
+    "vite-plugin-svgr": "4.3.0",
+    "vite-tsconfig-paths": "5.1.4"
   }
 }
