Include features as env variable

--- a/docker-compose.qa.yaml
+++ b/docker-compose.qa.yaml
@@ -139,17 +139,18 @@ services:
     <<: *la_qa_env
     environment:
       - JIRA_TOKEN=${JIRA_TOKEN}
+      - FEATURES_FOLDER=${FEATURES_FOLDER:-components}
     working_dir: /app
     command:
       - /bin/bash
       - -c
       - |
-        laqacommons review-duplicated-ids -f features 2> /app/errors_1.txt
+        laqacommons review-duplicated-ids -f ${FEATURES_FOLDER} 2> /app/errors_1.txt
         if [ -s /app/errors_1.txt]; then
           cat /app/errors_1.txt
           exit 1
         fi
-        laqacommons list-jira-bugs -f features -s "'Closed','Resolved'" 2> /app/errors_2.txt
+        laqacommons list-jira-bugs -f ${FEATURES_FOLDER} -s "'Closed','Resolved'" 2> /app/errors_2.txt
         if [ -s /app/errors_2.txt]; then
           cat /app/errors_2.txt
           exit 1
