--- a/tests/acceptance/.env
+++ b/tests/acceptance/.env
@@ -7,3 +7,5 @@ GIT_CRYPT_KEY=#TODO
 HARBOR_QACDCO_PASSWORD=#TODO
 HARBOR_LA_PASSWORD=#TODO
 NEXUS_LA_PASSWORD=#TODO
+
+# export $(cat .env.local | xargs)
