Include base features

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
 # Logs
 logs
 *.log
@@ -51,4 +56,5 @@ acceptance/resources/baseline/local*
 
 # automatic runners folders
 settings/runners/**/automatic/*
-**/tools/selenoid/*
+**/tools/selenoid/.logs/*
+**/tools/selenoid/.video/*
