--- a/tests/acceptance/docs/utils/template-local-toolium.cfg
+++ b/tests/acceptance/docs/utils/template-local-toolium.cfg
@@ -20,7 +20,7 @@ mock_mode: local
 env_file_path: .env.local
 user_test: user_telco_name
 # la_version: 3.25.0-yanguas
-pr_number: 481
+# pr_number: 481
 # demo_url: https://globalmakermedia.blob.core.windows.net/web-pocs/PRs/la-generic-470/build/index.html
 
 [Server]
