--- a/tests/acceptance/Makefile
+++ b/tests/acceptance/Makefile
@@ -38,8 +38,14 @@ docker-run-tests: docker-build ## Run QA tests in Docker
 	@docker compose -f "$(DOCKER_FILE)" run --rm \
 		-e USER_TEST="$(USER_TEST)" docker-tests
 
+# Local
+.PHONY: local-env install-requirements
+
 local-env: ## Start Selenoid service
 	@docker compose -f "$(DOCKER_FILE)" up selenoid mock-server
+
+install-requirements: ## Install requirements
+	@pip install -r requirements.txt
 
 # Linter
 .PHONY: lint ruff gherkin-lint npm-install-required
