--- a/tests/acceptance/settings/toolium.cfg
+++ b/tests/acceptance/settings/toolium.cfg
@@ -31,8 +31,8 @@ user_test: la_ci_user_0
 enable_mobile_emulation: true
 # La Version for RC, for example: 3.3.0-darnius. By default: latest
 la_version: latest
-pr_number: -1
-demo_url: None
+pr_number:
+demo_url:
 
 [ChromeArguments]
 disable-web-security : true
