--- a/tests/acceptance/docs/utils/template-local-toolium.cfg
+++ b/tests/acceptance/docs/utils/template-local-toolium.cfg
@@ -20,8 +20,8 @@ mock_mode: local
 env_file_path: .env.local
 user_test: user_telco_name
 # la_version: 3.25.0-yanguas
-pr_number: 481
-# demo_url: https://globalmakermedia.blob.core.windows.net/web-pocs/PRs/la-generic-470/build/index.html
+pr_number:
+demo_url:
 
 [Server]
 enabled: true
@@ -35,6 +35,7 @@ save: false
 version: v3.26_Zorita
 Build: Release
 labels: ft,regression
+Language: es
 
 [BrowserMobProxy]
 enabled: false
