--- a/tests/acceptance/.env
+++ b/tests/acceptance/.env
@@ -1,3 +1,4 @@
+SDF_MOCK_PROPERTIES=./settings/common-sdf-mock.json
 HARBOR_LA_USER=robot$la-qa+default
 HARBOR_QACDCO_USER=robot$qacdo-hub+la
 HARBOR_URL=harbor.tid.es
