chore: Update line reserve settings (#26)
* UPdate lines reserve

* Update profile

* Update env

* Include QA Tean in reference

* Update readme

* Rename sdf mock

* fix some issue

--- a/tests/acceptance/.env
+++ b/tests/acceptance/.env
@@ -1,9 +1,9 @@
+SDF_MOCK_PROPERTIES=./settings/common-sdf-mock.json
 HARBOR_LA_USER=robot$la-qa+default
 HARBOR_QACDCO_USER=robot$qacdo-hub+la
 HARBOR_URL=harbor.tid.es
 NEXUS_LA_USER=bot-la-reader
-PROJECT=#TODO
-GIT_CRYPT_KEY=#TODO
+ANSIBLE_VAULT_PASSWORD=#TODO
 HARBOR_QACDCO_PASSWORD=#TODO
 HARBOR_LA_PASSWORD=#TODO
 NEXUS_LA_PASSWORD=#TODO
