--- a/package.json
+++ b/package.json
@@ -28,25 +28,31 @@
   },
   "devDependencies": {
     "@telefonica/living-apps-core-web-types": "latest",
-    "@telefonica/living-apps-eslint-config": "0.1.2",
+    "@telefonica/living-apps-eslint-config": "0.3.0",
     "@testing-library/jest-dom": "6.6.3",
-    "@testing-library/react": "16.1.0",
+    "@testing-library/react": "16.3.0",
     "@types/jest": "29.5.14",
-    "@types/react": "19.0.4",
-    "@types/react-dom": "19.0.2",
-    "@vitejs/plugin-legacy": "6.0.0",
-    "@vitejs/plugin-react-swc": "3.7.2",
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.2",
+    "@vitejs/plugin-legacy": "6.1.0",
+    "@vitejs/plugin-react-swc": "3.9.0",
     "eslint": "8.57.1",
     "identity-obj-proxy": "3.0.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-transform-stub": "2.0.0",
-    "prettier": "3.4.2",
-    "ts-jest": "29.2.5",
-    "typescript": "5.7.3",
-    "vite": "6.0.7",
+    "prettier": "3.5.3",
+    "ts-jest": "29.3.2",
+    "typescript": "5.6.3",
+    "vite": "6.3.3",
     "vite-plugin-html": "3.2.2",
     "vite-plugin-svgr": "4.3.0",
     "vite-tsconfig-paths": "5.1.4"
-  }
+  },
+  "eslintConfig": {
+    "extends": [
+      "./node_modules/@telefonica/living-apps-eslint-config/.eslintrc.js"
+    ]
+  },
+  "prettier": "./node_modules/@telefonica/living-apps-eslint-config/.prettierrc.js"
 }
