fix: ensure mock server logging is disabled by setting logLevel to OFF

--- a/tests/tools/mock-server-new/mockserver.properties
+++ b/tests/tools/mock-server-new/mockserver.properties
@@ -7,3 +7,4 @@ mockserver.corsAllowHeaders=accept, accept-encoding, authorization, content-type
 mockserver.corsMaxAgeInSeconds=300
 
 mockserver.maxSocketTimeout=120000
+mockserver.logLevel=OFF
